fix(extensions): replace deprecated newInstance usage
- Updated to use getConstructor().newInstance() to avoid deprecation
- Maintains compatibility with newer Java versions
- Prevents potential runtime issues with deprecated API usage